[#noissue] Remove unused simpleResponseHistogram field and related builder method from MapServiceOption